--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -98,6 +98,11 @@
  .form_button {
    margin-top: 2em;
  }
+ .form_samll_section {
+   border: 1px solid;
+   margin: 1em 0;
+   padding: 1em;
+ }
  /*------------------------------
  For Play Youtube Video
 --------------------------------*/
