--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <%= csrf_meta_tags %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
+
+  <script>window._epn = {campaign:5338397259};</script>
+  <script src="https://epnt.ebay.com/static/epn-smart-tools.js"></script>
 </head>
 
 <body class="is-preload">
@@ -25,5 +28,7 @@
 
 <%= render 'shared/javascript.js' %>
 <%= render 'posts/post.js' %>
+
+
 
 </html>
