--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,21 +2,16 @@
   <%= render 'posts/navbar' %> 
 </header>
 
-<!-- Wrapper -->
 <div class="wrapper">
 
-  <!-- Main -->
     <section class="main">
 
-      <!-- Banner -->
       <%= render 'posts/banner' %> 
 
-      <!-- Blurb -->
         <section>
-          <p>This is jsut test AWS</p>
+          <p class="notice">Our website contains affiliate link which means that if you click on one of the product links and buy we’ll receive a small commission. This help supports us and allows us to continue to keep finding and sharing good deals.</p>
         </section>
 
-      <!-- Deals -->
         <div class="index_container">
           <p><%= link_to "Add New Inspiration", new_post_path %></p>
           <div class="grid">
