--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,10 +1,6 @@
 @import url(font-awesome.min.css);
 @import "https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Oswald:700";
-/*
-  Faction by Pixelarity
-  pixelarity.com | hello@pixelarity.com
-  License: pixelarity.com/license
-*/
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -144,8 +140,8 @@ input, select, textarea {
     /*border-bottom: dotted 1px;*/
   }
     a:hover {
-      /*color: #3ed8c4 !important;*/
-      color: #3ed8c4;
+      /*color: #000 !important;*/
+      color: #000;
       border-bottom-color: transparent;
     }
   strong, b {
@@ -271,7 +267,7 @@ input, select, textarea {
     color: #666;
   }
   a {
-    color: #3ed8c4;
+    color: #000;
   }
   strong, b {
     color: #666;
@@ -280,7 +276,7 @@ input, select, textarea {
     color: #aaa;
   }
   h1, h2, h3, h4, h5, h6 {
-    color: #3ed8c4;
+    color: #000;
   }
   blockquote {
     border-left-color: rgba(144, 144, 144, 0.25);
@@ -1435,7 +1431,7 @@ input, select, textarea {
     -webkit-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
     -ms-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
     transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
-    border-radius: 2em;
+    /*border-radius: 2em;*/
     border: solid 1px !important;
     cursor: pointer;
     display: inline-block;
@@ -1515,8 +1511,8 @@ input, select, textarea {
     input[type="button"]:hover,
     button:hover,
     .button:hover {
-      border-color: #3ed8c4;
-      color: #3ed8c4 !important;
+      border-color: #000;
+      color: #000 !important;
     }
     input[type="submit"]:active,
     input[type="reset"]:active,
@@ -1531,7 +1527,7 @@ input, select, textarea {
     button.primary,
     .button.primary {
       border: none;
-      background-color: #3ed8c4;
+      background-color: #000;
       color: #fff !important;
     }
       input[type="submit"].primary:hover,
@@ -1707,8 +1703,8 @@ input, select, textarea {
     input[type="url"]:focus,
     select:focus,
     textarea:focus {
-      border-color: #3ed8c4;
-      box-shadow: 0 0 0 1px #3ed8c4;
+      border-color: #000;
+      box-shadow: 0 0 0 1px #000;
     }
   select {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(144, 144, 144, 0.25)' /%3E%3C/svg%3E");
@@ -1728,14 +1724,14 @@ input, select, textarea {
     }
   input[type="checkbox"]:checked + label:before,
   input[type="radio"]:checked + label:before {
-    background-color: #3ed8c4;
-    border-color: #3ed8c4;
+    background-color: #000;
+    border-color: #000;
     color: #fff;
   }
   input[type="checkbox"]:focus + label:before,
   input[type="radio"]:focus + label:before {
-    border-color: #3ed8c4;
-    box-shadow: 0 0 0 1px #3ed8c4;
+    border-color: #000;
+    box-shadow: 0 0 0 1px #000;
   }
   ::-webkit-input-placeholder {
     color: #aaa !important;
@@ -2081,7 +2077,7 @@ input, select, textarea {
     color: #888;
   }
     ul.pagination li > .page.active {
-      background-color: #3ed8c4;
+      background-color: #000;
       color: #fff !important;
     }
       ul.pagination li > .page.active:hover {
@@ -2489,7 +2485,7 @@ input, select, textarea {
     width: calc(100% - 4em);
   }
     .wrapper.style1 {
-      background-color: #3ed8c4;
+      background-color: #000;
       color: #ecfbf9;
     }
       .wrapper.style1 input, .wrapper.style1 select, .wrapper.style1 textarea {
@@ -2550,7 +2546,7 @@ input, select, textarea {
         .wrapper.style1 .button.primary {
           border: none;
           background-color: #fff;
-          color: #3ed8c4 !important;
+          color: #000 !important;
         }
       .wrapper.style1 label {
         color: #fff;
@@ -2582,7 +2578,7 @@ input, select, textarea {
       }
         .wrapper.style1 select option {
           color: #fff;
-          background: #3ed8c4;
+          background: #000;
         }
       .wrapper.style1 input[type="checkbox"] + label,
       .wrapper.style1 input[type="radio"] + label {
@@ -2597,7 +2593,7 @@ input, select, textarea {
       .wrapper.style1 input[type="radio"]:checked + label:before {
         background-color: #fff;
         border-color: #fff;
-        color: #3ed8c4;
+        color: #000;
       }
       .wrapper.style1 input[type="checkbox"]:focus + label:before,
       .wrapper.style1 input[type="radio"]:focus + label:before {
@@ -2629,7 +2625,7 @@ input, select, textarea {
         color: #ecfbf9;
       }
         .wrapper.style1 ul.pagination li > .page.active {
-          background-color: #3ed8c4;
+          background-color: #000;
           color: #fff !important;
         }
           .wrapper.style1 ul.pagination li > .page.active:hover {
@@ -2691,7 +2687,7 @@ input, select, textarea {
         color: #fff;
       }
       .wrapper.style2 a {
-        color: #3ed8c4;
+        color: #000;
       }
       .wrapper.style2 strong, .wrapper.style2 b {
         color: #fff;
@@ -2700,7 +2696,7 @@ input, select, textarea {
         color: #adadad;
       }
       .wrapper.style2 h1, .wrapper.style2 h2, .wrapper.style2 h3, .wrapper.style2 h4, .wrapper.style2 h5, .wrapper.style2 h6 {
-        color: #3ed8c4;
+        color: #000;
       }
       .wrapper.style2 blockquote {
         border-left-color: rgba(255, 255, 255, 0.15);
@@ -2729,8 +2725,8 @@ input, select, textarea {
         .wrapper.style2 input[type="button"]:hover,
         .wrapper.style2 button:hover,
         .wrapper.style2 .button:hover {
-          border-color: #3ed8c4;
-          color: #3ed8c4 !important;
+          border-color: #000;
+          color: #000 !important;
         }
         .wrapper.style2 input[type="submit"]:active,
         .wrapper.style2 input[type="reset"]:active,
@@ -2745,7 +2741,7 @@ input, select, textarea {
         .wrapper.style2 button.primary,
         .wrapper.style2 .button.primary {
           border: none;
-          background-color: #3ed8c4;
+          background-color: #000;
           color: #fff !important;
         }
           .wrapper.style2 input[type="submit"].primary:hover,
@@ -2784,8 +2780,8 @@ input, select, textarea {
         .wrapper.style2 input[type="url"]:focus,
         .wrapper.style2 select:focus,
         .wrapper.style2 textarea:focus {
-          border-color: #3ed8c4;
-          box-shadow: 0 0 0 1px #3ed8c4;
+          border-color: #000;
+          box-shadow: 0 0 0 1px #000;
         }
       .wrapper.style2 select {
         background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(255, 255, 255, 0.15)' /%3E%3C/svg%3E");
@@ -2805,14 +2801,14 @@ input, select, textarea {
         }
       .wrapper.style2 input[type="checkbox"]:checked + label:before,
       .wrapper.style2 input[type="radio"]:checked + label:before {
-        background-color: #3ed8c4;
-        border-color: #3ed8c4;
+        background-color: #000;
+        border-color: #000;
         color: #fff;
       }
       .wrapper.style2 input[type="checkbox"]:focus + label:before,
       .wrapper.style2 input[type="radio"]:focus + label:before {
-        border-color: #3ed8c4;
-        box-shadow: 0 0 0 1px #3ed8c4;
+        border-color: #000;
+        box-shadow: 0 0 0 1px #000;
       }
       .wrapper.style2 ::-webkit-input-placeholder {
         color: #adadad !important;
@@ -2839,7 +2835,7 @@ input, select, textarea {
         color: #d6d6d6;
       }
         .wrapper.style2 ul.pagination li > .page.active {
-          background-color: #3ed8c4;
+          background-color: #000;
           color: #fff !important;
         }
           .wrapper.style2 ul.pagination li > .page.active:hover {
@@ -2941,7 +2937,8 @@ input, select, textarea {
     -webkit-justify-content: -webkit-flex-end;
     -ms-justify-content: -ms-flex-end;
     justify-content: flex-end;
-    background: #2ebfac;
+    /*background: #2ebfac;*/
+    background: #000;
     color: #fff;
     left: 0;
     padding: 0 1.5em;
@@ -2983,7 +2980,7 @@ input, select, textarea {
       #header .button.primary {
         border: none;
         background-color: #fff;
-        color: #3ed8c4 !important;
+        color: #000 !important;
       }
     #header a {
       color: inherit !important;
@@ -3110,7 +3107,7 @@ input, select, textarea {
           }
           .dropotron li.active > a {
             color: #fff !important;
-            background-color: #3ed8c4;
+            background-color: #000;
           }
         .dropotron a {
           -moz-transition: none;
@@ -3123,7 +3120,7 @@ input, select, textarea {
         }
           .dropotron a:hover {
             color: #fff !important;
-            background-color: #3ed8c4;
+            background-color: #000;
           }
     @media screen and (max-width: 1280px) {
       #header a {
@@ -3256,7 +3253,7 @@ input, select, textarea {
         font-weight: 600;
       }
       #navPanel .link:active, #navPanel .link:focus, #navPanel .link:hover {
-        color: #3ed8c4 !important;
+        color: #000 !important;
       }
       #navPanel .link .indent-1 {
         display: inline-block;
@@ -3328,7 +3325,7 @@ input, select, textarea {
       color: #ffffff;
     }
     #banner a {
-      color: #3ed8c4;
+      color: #000;
     }
     #banner strong, #banner b {
       color: #ffffff;
@@ -3337,7 +3334,7 @@ input, select, textarea {
       color: #ffffff;
     }
     #banner h1, #banner h2, #banner h3, #banner h4, #banner h5, #banner h6 {
-      color: #3ed8c4;
+      color: #000;
     }
     #banner blockquote {
       border-left-color: #ffffff;
@@ -3363,8 +3360,8 @@ input, select, textarea {
       #banner input[type="button"]:hover,
       #banner button:hover,
       #banner .button:hover {
-        border-color: #3ed8c4;
-        color: #3ed8c4 !important;
+        border-color: #000;
+        color: #000 !important;
       }
       #banner input[type="submit"]:active,
       #banner input[type="reset"]:active,
@@ -3379,7 +3376,7 @@ input, select, textarea {
       #banner button.primary,
       #banner .button.primary {
         border: none;
-        background-color: #3ed8c4;
+        background-color: #000;
         color: #fff !important;
       }
         #banner input[type="submit"].primary:hover,
