--- a/app/views/dealzons/index.html.erb
+++ b/app/views/dealzons/index.html.erb
@@ -1,5 +1,5 @@
 <header id="header">
-  <%= render 'posts/navbar' %> 
+  <%= render 'dealzons/navbar' %> 
 </header>
 
 <div class="index_header">
@@ -40,30 +40,55 @@
                 <% if deal.acategory_id == 1 %> 
                  <div class="card--category category_red"><%= deal.acategory.name %></div>
                 <% end %>
+
                 <% if deal.acategory_id == 2 %> 
                  <div class="card--category category_green"><%= deal.acategory.name %></div>
+                 <div class="category_sale"> you can save <span class="deal_index"><%= deal.am_price_sale %>%off</span></div>
                 <% end %>
+
                 <% if deal.acategory_id == 3 %> 
                  <div class="card--category category_purple"><%= deal.acategory.name %></div>
+                 <% if deal.am_expire.present? %>
+                  <div class="somthing_hidden"><%= deal.am_expire %></div>
+                  <div class="category_sale_expired">This promotion has expired.</div>
+                 <% end %>
                 <% end %>
+
                 <% if deal.acategory_id == 4 %> 
                  <div class="card--category category_blue"><%= deal.acategory.name %></div>
-                 <div class="category_sale"> you can save <span class="sale_index"><%= deal.am_price_sale %>%off</span> more</div>
+                 <% if deal.am_expire.present? %>
+                  <div class="somthing_hidden"><%= deal.am_expire %></div>
+                  <div class="category_sale_expired">This code has expired.</div>
+                 <% else %>
+                  <div class="category_sale"> you can save <span class="code_index"><%= deal.am_price_sale %>%off more</span></div>
+                 <% end %>
                 <% end %>
-                <% if deal.acategory_id == 5 %> 
-                 <div class="card--category category_orange"><%= deal.acategory.name %></div>
-                <% end %>
+
               </div>
 
               <p><%= deal.am_title %></p>
-              <ul>
-                <li>$<%= deal.am_price_is %></li>
-                <% if deal.acategory_id == 4 %> 
 
-                <% else %>
+
+              <ul>
+                <% if deal.acategory_id == 1 %> 
+                 <li><%= deal.am_price_sale %>% Off</li>
+                <% end %>
+
+                <% if deal.acategory_id == 2 %> 
+                 <li>$<%= deal.am_price_is %></li>
                  <li>$<%= deal.am_price_was %></li>
                 <% end %>
+
+                <% if deal.acategory_id == 3 %>
+                 <li class="price_hidden">hidden</li>                
+                <% end %> 
+
+                <% if deal.acategory_id == 4 %>   
+                 <li>$<%= deal.am_price_is %></li>             
+                <% end %>
               </ul>
+
+              
               <div class="index_button">
               <a class="button primary fit" href="dealzons/<%= deal.id %>">See More Detail</a>
               </div>  
