--- a/app/views/dealzons/show.html.erb
+++ b/app/views/dealzons/show.html.erb
@@ -1,5 +1,5 @@
 <header id="header">
-  <%= render 'posts/navbar' %> 
+  <%= render 'dealzons/navbar' %> 
 </header>
 
 <div class="wrapper">
@@ -16,13 +16,34 @@
 
         <div class="show_right">
           <h3><%= @dealzon.am_title %></h3>
-          <ul>
-            <li class="show_price_is">$<%= @dealzon.am_price_is %></li>
-            <% if @dealzon.am_shipping.present? %>
-             <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
-             <li>+ free shipping</li>
-            <% end %>
-          </ul>
+          <div class="show_price_section">
+             <ul>
+              <% if @dealzon.acategory_id == 1 %> 
+               <li><%= @dealzon.am_price_sale %>% Off</li>
+              <% end %>
+
+              <% if @dealzon.acategory_id == 2 %> 
+               <li>$<%= @dealzon.am_price_is %></li>
+               <li>$<%= @dealzon.am_price_was %></li>
+               <% if @dealzon.am_shipping.present? %>
+                <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
+                <li>+ free shipping</li>
+               <% end %>
+              <% end %>
+
+              <% if @dealzon.acategory_id == 3 %>
+               <li class="price_hidden">hidden</li>                
+              <% end %> 
+
+              <% if @dealzon.acategory_id == 4 %>   
+               <li>$<%= @dealzon.am_price_is %></li>  
+               <% if @dealzon.am_shipping.present? %>
+                <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
+                <li>+ free shipping</li>
+               <% end %>           
+              <% end %>
+            </ul>
+          </div>
           <hr>
            <% if @dealzon.am_expire.present? %>
              <div class="somthing_hidden"><%= @dealzon.am_expire %></div>
@@ -32,7 +53,7 @@
                 <p class="end_date">This code has expired.</p>                
               </div>
              <% end %>
-             <% if @dealzon.acategory_id == 5 %>
+             <% if @dealzon.acategory_id == 3 %>
               <div class="promo_code">
                <p class="end_date">This promotion has expired.</p>
               </div>
@@ -44,7 +65,7 @@
                 <p class="code_date">Expiration Date: <%= @dealzon.am_date %></p>
                </div>
               <% end %>
-              <% if @dealzon.acategory_id == 5  %>
+              <% if @dealzon.acategory_id == 3  %>
                <div class="promo_code">
                 <p class="code_date">Expiration Date: <%= @dealzon.am_date %></p>
                </div>
@@ -58,12 +79,19 @@
              <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %></span> at Amazon. If you use this promo code, you could save <span class="show_bold"><%= @dealzon.am_price_sale %>% off</span> more.</p>
              <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
             <% else %>
-             <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %>(<%= @dealzon.am_price_sale %>% Off)</span> at Amazon.</p>
+             <% if @dealzon.acategory_id == 1 %> 
              
-             <% if @dealzon.am_shipping.present? %>
-              <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
-              <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
-             <% end %>
+             <% else %>
+                <% if @dealzon.acategory_id == 3 %> 
+
+                <% else %>
+                 <p><span class="show_bold"><%= @dealzon.am_title %></span> is on sale now for <span class="show_bold">$<%= @dealzon.am_price_is %>(<%= @dealzon.am_price_sale %>% Off)</span> at Amazon.</p>
+                 <% if @dealzon.am_shipping.present? %>
+                  <div class="somthing_hidden"><%= @dealzon.am_shipping %></div>
+                  <p><span class="show_bold">Shipping is free</span> ( Prime or $25+ of all other eligible items.)</p><br/>
+                <% end %>
+               <% end %>
+              <% end %>
             <% end %>
           
             <div class="ckeditor">
@@ -108,20 +136,63 @@
         </div><!--/.show-right-->
       </div><!--/.show_detail_wrap-->
 
-       <div class="related_show">
-        <h1>You may also be interested in the following product(s)</h1>
-        <% @dealzon_show.each do |deal| %>
-         <% if deal.acategory_id == @dealzon.acategory_id %> 
-         <div class="related_card">
-           <%= link_to (image_tag deal.am_image), deal %>
-           <h3><%= link_to deal.am_title, deal %></h3>
-         </div>
-         <% end %>
-        <% end %>
-       </div>
-      
+
     </section>
- 
+
+    <div class="wrapper">
+     <section class="main">
+      <section>
+       <section class="grid-section">
+
+          <h1 class="interested">You may also be interested in the following product(s)</h1>
+          <% @dealzon_show.each do |dealshow| %>
+           <% if dealshow.acategory_id == @dealzon.acategory_id %> 
+            <article class="related-card">
+              <div class="related-card__image">
+                <%= link_to (image_tag dealshow.am_image), dealshow %>
+              </div>
+              <% if @dealzon.acategory_id == 4 %>
+                <div class="related-card__title">
+                  <p><%= link_to dealshow.am_title, dealshow %><br/>
+                  You can save <%= @dealzon.am_price_sale %>% more</p>
+                </div>
+              <% else %>
+               <div class="related-card__title">
+                  <p><%= link_to dealshow.am_title, dealshow %></p>
+               </div>
+              <% end %>
+
+              
+              <% if @dealzon.acategory_id == 1 %>
+              <% else %>
+               <% if @dealzon.acategory_id == 3 %>
+               <% else %>
+                <% if @dealzon.acategory_id == 4 %>
+                  <div class="related-card__details">
+                     <span class="related-card__details--like">$<%= dealshow.am_price_is %></span>
+                  </div>
+                <% else %>
+                <div class="related-card__details">
+                   <span class="related-card__details--like">$<%= dealshow.am_price_is %></span>
+                   <span class="related-card__details--view">$<%= dealshow.am_price_was %></i></span>        
+                </div>
+                <% end %>
+               <% end %>
+              <% end %>
+
+            </article>
+           <% end %>
+          <% end %>
+
+          
+
+
+                      
+         </section>
+       </section>
+     </section>
+    </div>
+
   </section>
   
 
