--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,30 @@
-<h2>Sign up</h2>
+<header id="header">
+  <%= render 'posts/navbar' %> 
+</header>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="wrapper">
+  <section class="main">
+    <div class="devise_wrap">
 
-  <div class="form-inputs">
-    <%= f.input :name, required: true, autofocus: true, input_html: { autocomplete: "name" }%>
-    <%= f.input :email, required: true, input_html: { autocomplete: "email" }%>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
-  </div>
+      <h2>Sign up</h2>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
 
-<%= render "devise/shared/links" %>
+        <div class="form-inputs">
+          <%= f.input :name, required: true, autofocus: true, input_html: { autocomplete: "name" }%>
+          <%= f.input :email, required: true, input_html: { autocomplete: "email" }%>
+          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
+          <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
+        </div>
+        <br/>
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    
+    </div>
+  </section>
+</div>
