--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -7,12 +7,12 @@
 <!-- Nav -->
 <nav id="nav">
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><%= link_to "Home", root_path %></li>
 
     <li>
-      <a href="#" class="icon fa-angle-down">Categories</a>
+      <a href="#" class="icon fa-angle-down">Gadgets</a>
       <ul>
-        <li><%=link_to "Everything", root_path %></li>
+        <li><%=link_to "What's New", root_path %></li>
         <% Category.all.each do |category| %>
          <li><%= link_to category.name, posts_path(category: category.name) %></li>
         <% end %>
@@ -20,29 +20,62 @@
     </li>
 
     <li>
-      <a href="#" class="icon fa-angle-down">Stores</a>
+      <a href="#" class="icon fa-angle-down">Deals</a>
       <ul>
-       <li><a href="/dealzons">Amazon</a></li>
+       <li><%= link_to "Amazon", dealzons_path %></li>
        <li>
-         <a href="/events">eBay</a>
-         <ul>
-            <li><%= link_to "All Offer", dealzons_path %></li>
+          <a>eBay</a>
+          <ul>
+            <li><%=link_to "What's New", events_path %></li>
             <% Ecategory.all.each do |ecategory| %>
-             <li><%= link_to ecategory.name, dealzons_path(ecategory: ecategory.name) %></li>
+             <li><%= link_to ecategory.name, events_path(ecategory: ecategory.name) %></li>
             <% end %>
           </ul>
-      </li>
-      <li><a href="/events">eBay</a></li>
+         </li>
       </ul>
     </li>
 
-    <li><a href="Blogs">Blog</a></li>
+    <li><%= link_to "Blog", blogs_path %></li>
 
-    <% if user_signed_in? %>
-      <li class="button"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-    <% else %>
-      <li class="button"><%= link_to "Log in", new_user_session_path %></li>
-      <li class="button"><%= link_to "Sign up", new_user_registration_path %></li>
+    <% if can? :update, @post %>
+     <li>
+       <a href="#" class="icon fa-angle-down">Admin & Create</a>
+       <ul>
+         <li>
+            <a href="/dealzons">Gadget & Deals</a>
+            <ul>
+             <li><%= link_to "Gadget", new_post_path %></li>
+             <li><%= link_to "Amazon", new_dealzon_path %></li>
+             <li><%= link_to "eBay", new_event_path %></li>
+             <li><%= link_to "Blog", new_blog_path %></li>
+            </ul>
+         </li>
+         <li>
+          <a href="/dealzons">Create category</a>
+          <ul>
+           <li><%= link_to "Gadget", new_category_path %></li>
+           <li><%= link_to "Amazon", new_acategory_path %></li>
+           <li><%= link_to "eBay", new_ecategory_path %></li>
+          </ul>
+         </li>
+         <li>
+          <a href="/dealzons">Manage category</a>
+          <ul>
+           <li><%= link_to "Gadget", categories_path %></li>
+           <li><%= link_to "Amazon", acategories_path %></li>
+           <li><%= link_to "eBay", ecategories_path %></li>
+          </ul>
+         </li>    
+         <% if user_signed_in? %>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+         <% else %>
+          <li><%= link_to "Log in", new_user_session_path %></li>
+          <li><%= link_to "Sign up", new_user_registration_path %></li>
+         <% end %>
+
+      </ul>
+    </li>
     <% end %>
+    
   </ul>
 </nav>
