--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <header id="header">
-  <%= render 'posts/navbar' %> 
+  <%= render 'events/navbar' %> 
 </header>
 
 <div class="wrapper">
@@ -18,18 +18,18 @@
           <div class="show_right">
             <h3><%= @event.eb_title %></h3>
             <% if @event.ecategory_id == 1 %>
-             <ul>
-              <li><%= @event.eb_intro %></li>
-             </ul>
             <% else %>
-             <ul>
-              <li class="show_price_is">$<%= @event.eb_price_is %></li>
-              <li class="show_price_was">$<%= @event.eb_price_was %></li>
-              <% if @event.eb_shipping.present? %>
-                <p class="somthing_hidden"><%= @event.eb_shipping %></p>
-                <li>+ free shipping</li>
-              <% end %>
-             </ul>
+             <% if @event.ecategory_id == 3 %>
+             <% else %>
+              <ul>
+                <li class="show_price_is">$<%= @event.eb_price_is %></li>
+                <li class="show_price_was">$<%= @event.eb_price_was %></li>
+                <% if @event.eb_shipping.present? %>
+                  <p class="somthing_hidden"><%= @event.eb_shipping %></p>
+                  <li>+ free shipping</li>
+                <% end %>
+               </ul>
+             <% end %>
             <% end %>
             <hr>
              <% if @event.ecategory_id == 3 %>
@@ -48,7 +48,7 @@
             <hr>
             <div class="contents">
              <% if @event.ecategory_id == 1 %>
-               <p class="featured_deal">Best Sales</p>
+               <p class="featured_deal">- Best Deals -</p>
              <% else %>
               <% if @event.ecategory_id == 2 %>
                <p><span class="show_bold"><%= @event.eb_title %></span> is on sale now for <span class="show_bold"><%= @event.eb_price_is %> (<%= @event.eb_price_sale %>% off)</span> at eBay. 
@@ -56,7 +56,7 @@
                <% if @event.ecategory_id == 4 %>
                 <p><span class="show_bold"><%= @event.eb_title %></span> is on sale now for <span class="show_bold"><%= @event.eb_price_is %> (<%= @event.eb_price_sale %>% off)</span> at eBay. 
                <% else %>
-                <p><span class="show_bold"><%= @event.eb_title %></span> is on sale now for <span class="show_bold"><%= @event.eb_price_is %></span> at eBay. If you use this promo code, you could save <span class="show_bold"><%= @event.eb_price_sale %>% off</span> more.</p>
+                <p><span>This Coupon is a <%= @event.eb_price_sale %>% discount valid until <%= @event.eb_date %><br/>Discount applies to the purchase price (excluding shipping, handling, and taxes) of an eligible item(s) of $0 or more on ebay.com.</p><br/>
                <% end %>
               <% end %>
              <% end %>
@@ -102,6 +102,41 @@
         
       </section>
 
+      <div class="wrapper">
+         <section class="main">
+          <section>
+           <section class="grid-section">
+
+              <h1 class="interested">You may also be interested in the following product(s)</h1>
+              <% @event_show.each do |eventshow| %>
+               <% if eventshow.ecategory_id == @event.ecategory_id %> 
+                <article class="related-card">
+                  <div class="related-card__image">
+                    <%= link_to (image_tag eventshow.eb_image), eventshow %>
+                  </div>
+                  <div class="related-card__title">
+                    <p><%= link_to eventshow.eb_title, eventshow %></p>
+                  </div>
+                  
+                  <% if @event.ecategory_id == 1 %>
+                  <% else %>
+                   <% if @event.ecategory_id == 3 %>
+                   <% else %>
+                    <div class="related-card__details">
+                       <span class="related-card__details--like">$<%= eventshow.eb_price_is %></span>
+                       <span class="related-card__details--view">$<%= eventshow.eb_price_was %></i></span>        
+                    </div>
+                   <% end %>
+                  <% end %>
+                </article>
+               <% end %>
+              <% end %>
+                          
+             </section>
+           </section>
+         </section>
+        </div>
+
     </section>
 
   <!-- Sidebar -->
@@ -110,3 +145,6 @@
 
 <!-- Footer -->
 <%= render 'shared/footer' %>
+
+
+ 
