--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <section class="info">
       <h3>About Us</h3>
       <div class="about">
-        <p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur malesuada.</p><p>Sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis.</p>
+        <p>"Oh, i gotta buy this" only want to show the best deals, the coolest gadgets and the best inventions you can find and buy on the website. We`re not interested in spamming any boring or lame products at you. All you need to know is in our website, you are going to find a lot of coolest & awesome items and the best deals that you are most definitely going to like and perhaps even get tempted to buy some of them, so hang on tight to your wallet. Enjoy!</p>
         <ul class="actions">
           <li><a href="#" class="button">Learn More</a></li>
         </ul>
